--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
+# network info
+L1_CHAIN_ID=
+L1_PRIVATE_KEY=
+L1_RPC_HTTP=
+SUAVE_KETTLE_ADDRESS=
 SUAVE_PRIVATE_KEY=
 SUAVE_RPC_HTTP=
-L1_RPC_HTTP=
-L1_CHAIN_ID=
+
+# contracts
 CHATNFT_ADDRESS=
+NFTEE_ADDRESS=
+
+# chatgpt-4-turbo access required
 OPENAI_API_KEY=
