--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/contracts/lib/forge-std"]
 	path = src/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "src/contracts/lib/suave-std"]
+	path = src/contracts/lib/suave-std
+	url = https://github.com/flashbots/suave-std
