forge install: openzeppelin-contracts
v5.0.2

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/contracts/lib/solmate"]
 	path = src/contracts/lib/solmate
 	url = https://github.com/transmissions11/solmate
+[submodule "src/contracts/lib/openzeppelin-contracts"]
+	path = src/contracts/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
