--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,12 @@
 # network info
-L1_CHAIN_ID=
-L1_PRIVATE_KEY=
-L1_RPC_HTTP=
-SUAVE_KETTLE_ADDRESS=
-SUAVE_RPC_HTTP=
+VITE_L1_CHAIN_ID=
+VITE_L1_RPC_HTTP=
+VITE_SUAVE_KETTLE_ADDRESS=
+VITE_SUAVE_RPC_HTTP=
 
 # contracts
-CHATNFT_ADDRESS=
-NFTEE_ADDRESS=
+VITE_CHATNFT_ADDRESS=
+VITE_NFTEE_ADDRESS=
 
 # chatgpt-4-turbo access required
 OPENAI_API_KEY=
